# Tsukiyomi

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: model.h  renderer.h  trainer.h  utils.h
scripts/: convert_data.py
src/: main.cpp  model.cpp  renderer.cpp  trainer.cpp  utils.cpp
